--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neoskop/nestjs",
-  "version": "0.1.0-rc.7",
+  "version": "0.1.0",
   "description": "Collection of useful NestJS Modules",
   "main": "index.js",
   "repository": "https://github.com/neoskop/nestjs",
