--- a/package.json
+++ b/package.json
@@ -15,31 +15,33 @@
     "publish-latest": "npm run publish-latest-only && npm dist-tag add @neoskop/nestjs@`jq '.version' package.json -r` next"
   },
   "devDependencies": {
-    "@angular/core": "8.2.4",
-    "@angular/platform-server": "8.2.4",
-    "@angular/router": "8.2.4",
+    "@angular/core": "8.2.6",
+    "@angular/platform-server": "8.2.6",
+    "@angular/router": "8.2.6",
     "@neoskop/adamant": "0.3.0-rc.6",
     "@neoskop/annotation-factory": "1.0.1",
     "@neoskop/hrbac": "1.0.1",
     "@neoskop/phantom": "1.3.0",
-    "@nestjs/common": "6.6.3",
-    "@nestjs/core": "6.6.3",
-    "@nestjs/graphql": "6.4.3",
+    "@nestjs/common": "6.6.7",
+    "@nestjs/core": "6.6.7",
+    "@nestjs/graphql": "6.5.1",
+    "@nestjs/terminus": "6.5.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.1",
     "@types/http-proxy-middleware": "0.19.3",
     "@types/json-schema": "7.0.3",
-    "@types/node": "12.7.3",
+    "@types/node": "12.7.5",
+    "@types/pouchdb": "6.4.0",
     "@types/simple-oauth2": "2.2.1",
     "@types/winston": "2.4.4",
     "ajv": "6.10.2",
     "cookie-parser": "^1.4.4",
-    "http-proxy-middleware": "0.19.1",
+    "http-proxy-middleware": "0.20.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "6.5.2",
-    "simple-oauth2": "2.3.0",
-    "typescript": "3.6.2",
+    "rxjs": "6.5.3",
+    "simple-oauth2": "2.4.0",
+    "typescript": "3.6.3",
     "winston": "3.2.1",
     "zone.js": "0.10.2"
   },
@@ -48,21 +50,22 @@
   },
   "peerDependencies": {
     "@angular/core": "*",
-    "@angular/platform-server": "^7.2.9",
-    "@neoskop/adamant": "^0.3.0-rc.5",
-    "@neoskop/hrbac": "^1.0.1",
-    "@neoskop/phantom": "^1.3.0",
-    "@nestjs/common": "^6.1.1",
-    "@nestjs/core": "^6.1.1",
-    "@nestjs/graphql": "^6.0.5",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
-    "ajv": "^6.10.0",
-    "cookie-parser": "^1.4.4",
-    "http-proxy-middleware": "^0.19.1",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0",
-    "simple-oauth2": "^2.2.1",
-    "winston": "^3.2.1",
-    "zone.js": "0.9.1"
+    "@angular/platform-server": ">=8.2.6",
+    "@neoskop/adamant": ">=0.3.0-rc.5",
+    "@neoskop/hrbac": ">=1.0.1",
+    "@neoskop/phantom": ">=1.3.0",
+    "@nestjs/common": ">=6",
+    "@nestjs/core": ">=6",
+    "@nestjs/graphql": ">=6",
+    "@nestjs/terminus": ">=6",
+    "@nguniversal/module-map-ngfactory-loader": ">=7.1.1",
+    "ajv": ">=6.10.0",
+    "cookie-parser": ">=1.4.4",
+    "http-proxy-middleware": ">=0.19.1",
+    "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
+    "simple-oauth2": ">=2.2.1",
+    "winston": ">=3.2.1",
+    "zone.js": ">=0.10.2"
   }
 }
