fix: set wildcard for peer dependency versions

--- a/package.json
+++ b/package.json
@@ -51,25 +51,25 @@
     "tslib": "1.10.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=9.1.0",
-    "@angular/core": ">=9.1.0",
-    "@angular/platform-server": ">=9.1.0",
-    "@neoskop/adamant": ">=0.3.0-rc.5",
-    "@neoskop/hrbac": ">=1.0.1",
-    "@neoskop/phantom": ">=1.3.0",
-    "@nestjs/common": ">=6",
-    "@nestjs/core": ">=6",
-    "@nestjs/graphql": ">=6",
-    "@nestjs/terminus": ">=6",
-    "ajv": ">=6.10.0",
-    "cookie-parser": ">=1.4.4",
-    "http-proxy-middleware": ">=0.19.1",
-    "oauth2-server": ">=3.0.1",
-    "reflect-metadata": ">=0.1.12",
-    "rxjs": ">=6.0.0",
-    "simple-oauth2": ">=2.2.1",
-    "winston": ">=3.2.1",
-    "zone.js": ">=0.10.2"
+    "@angular/common": "*",
+    "@angular/core": "*",
+    "@angular/platform-server": "*",
+    "@neoskop/adamant": "*",
+    "@neoskop/hrbac": "*",
+    "@neoskop/phantom": "*",
+    "@nestjs/common": "*",
+    "@nestjs/core": "*",
+    "@nestjs/graphql": "*",
+    "@nestjs/terminus": "*",
+    "ajv": "*",
+    "cookie-parser": "*",
+    "http-proxy-middleware": "*",
+    "oauth2-server": "*",
+    "reflect-metadata": "*",
+    "rxjs": "*",
+    "simple-oauth2": "*",
+    "winston": "*",
+    "zone.js": "*"
   },
   "prettier": {
     "trailingComma": "none",
