--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/terminus": "6.5.1",
     "@types/cookie-parser": "1.4.2",
     "@types/express": "4.17.1",
-    "@types/http-proxy-middleware": "0.19.3",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/json-schema": "7.0.3",
     "@types/node": "12.7.5",
     "@types/oauth2-server": "3.0.12",
@@ -38,7 +38,7 @@
     "@types/winston": "2.4.4",
     "ajv": "6.10.2",
     "cookie-parser": "^1.4.4",
-    "http-proxy-middleware": "0.20.0",
+    "http-proxy-middleware": "^2.0.0",
     "oauth2-server": "3.0.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.5.3",
