feat(hrbac): update to @neoskop/hrbac@2.0.0-rc.1

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "9.1.0",
     "@neoskop/adamant": "0.3.0-rc.6",
     "@neoskop/annotation-factory": "1.0.1",
-    "@neoskop/hrbac": "1.0.1",
+    "@neoskop/hrbac": "2.0.0-rc.1",
     "@neoskop/phantom": "1.3.0",
     "@nestjs/common": "6.6.7",
     "@nestjs/core": "6.6.7",
@@ -56,7 +56,7 @@
     "@angular/core": "*",
     "@angular/platform-server": "*",
     "@neoskop/adamant": "*",
-    "@neoskop/hrbac": "*",
+    "@neoskop/hrbac": ">=2.0.0-rc.1",
     "@neoskop/phantom": "*",
     "@nestjs/common": "*",
     "@nestjs/core": "*",
