--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prebuild": "rm -rf dist",
     "build": "tsc",
     "postbuild": "jq 'del(.scripts) | del(.devDependencies)' package.json > dist/package.json && cp README.md dist",
-    "publish-next": "npm run build && npm publish dist --tag next",
-    "publish-latest-only": "npm run build && npm publish dist",
+    "publish-next": "npm run build && cd dist && npm publish --tag next",
+    "publish-latest-only": "npm run build && cd dist && npm publish",
     "publish-latest": "npm run publish-latest-only && npm dist-tag add @neoskop/nestjs@`jq '.version' package.json -r` next"
   },
   "devDependencies": {
