--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "8",
     "@nestjs/terminus": "8",
     "@types/cookie-parser": "1.4.2",
+    "@types/esm": "^3.2.0",
     "@types/express": "4.17.1",
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/json-schema": "7.0.3",
@@ -48,6 +49,7 @@
     "zone.js": "0.10.2"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "import-fresh": "^3.3.0",
     "tslib": "^2.2.0"
   },
