--- a/package.json
+++ b/package.json
@@ -44,16 +44,13 @@
     "rxjs": "6.5.3",
     "simple-oauth2": "2.4.0",
     "typescript": "^4.2.4",
-    "winston": "3.2.1",
-    "zone.js": "0.10.2"
+    "winston": "3.2.1"
   },
   "dependencies": {
     "tslib": "^2.2.0"
   },
   "peerDependencies": {
-    "@angular/common": "*",
     "@angular/core": "*",
-    "@angular/platform-server": "*",
     "@neoskop/adamant": "*",
     "@neoskop/hrbac": ">=2.0.0-rc.1",
     "@neoskop/phantom": "*",
@@ -68,8 +65,7 @@
     "reflect-metadata": "*",
     "rxjs": "*",
     "simple-oauth2": "*",
-    "winston": "*",
-    "zone.js": "*"
+    "winston": "*"
   },
   "prettier": {
     "trailingComma": "none",
